--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body[data-mode="pro"]{
 body[data-mode="perso"]{
   --bg:#0a0a0a;--bg2:#111;--surface:#151515;--surface2:#1a1a1a;
   --border:#222;--border2:#333;
-  --text:#f0f0f0;--text2:#999;--text3:#666;
+  --text:#f5f5f5;--text2:#bbb;--text3:#888;
   --hero-overlay:linear-gradient(to right,rgba(10,10,10,.92) 40%,rgba(10,10,10,.3));
   --nav-bg:rgba(10,10,10,.85);--nav-border:#222;
   --card-shadow:0 2px 12px rgba(0,0,0,.3);
@@ -92,7 +92,7 @@ body[data-mode="perso"] .toggle-track::after{transform:translateX(20px)}
 .hero-portrait-container{position:relative;width:100%;max-width:440px;aspect-ratio:3/4;border-radius:var(--radius);overflow:hidden}
 body[data-mode="perso"] .hero-portrait-container{box-shadow:none}
 .hero-portrait-bg{display:none}
-.hero-portrait-cutout{position:absolute;inset:0;width:100%;height:100%;object-fit:cover;object-position:center top;z-index:1;opacity:.4}
+.hero-portrait-cutout{position:absolute;inset:0;width:100%;height:100%;object-fit:cover;object-position:center top;z-index:1;opacity:.7}
 .hero-portrait-pro .hero-portrait-cutout{opacity:.7}
 
 .scroll-hint{position:absolute;bottom:32px;left:50%;transform:translateX(-50%);display:flex;flex-direction:column;align-items:center;gap:8px;opacity:.5}
@@ -134,13 +134,11 @@ section{padding:100px 0;transition:background .7s var(--ease)}
 /* LOGO CAROUSEL — 25% bigger, no header, better visibility */
 .logos-section{padding:50px 0;border-top:1px solid var(--border);border-bottom:1px solid var(--border);overflow:hidden;transition:border-color .7s var(--ease)}
 .logos-track-wrapper{overflow:hidden;position:relative}
-.logos-track-wrapper::before,.logos-track-wrapper::after{content:'';position:absolute;top:0;bottom:0;width:80px;z-index:2;transition:background .7s var(--ease)}
-.logos-track-wrapper::before{left:0;background:linear-gradient(to right,var(--bg),transparent)}
-.logos-track-wrapper::after{right:0;background:linear-gradient(to left,var(--bg),transparent)}
+.logos-track-wrapper::before,.logos-track-wrapper::after{display:none}
 .logos-track{display:flex;gap:56px;animation:marquee 30s linear infinite;width:max-content;align-items:center}
 .logos-track:hover{animation-play-state:paused}
-.logo-item{display:flex;align-items:center;gap:14px;flex-shrink:0;opacity:.7;transition:opacity .3s}
-.logo-item:hover{opacity:1}
+.logo-item{display:flex;align-items:center;gap:14px;flex-shrink:0;transition:opacity .3s}
+.logo-item:hover{opacity:.7}
 .logo-item img{height:48px;width:auto;max-width:80px;border-radius:8px;object-fit:contain}
 .logo-text{font-size:1.25rem;font-weight:500;color:var(--text2);white-space:nowrap}
 .logo-text-sm{font-size:1.05rem}
