--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@ section{padding:100px 0;transition:background .7s var(--ease)}
 .timeline-desc{font-size:.9rem;color:var(--text2);line-height:1.7;max-width:580px}
 
 /* PHOTO BANNER — cinematic style matching motto section */
-.photo-banner{width:100%;min-height:50vh;overflow:hidden;position:relative}
+.photo-banner{width:100%;min-height:62vh;overflow:hidden;position:relative}
 .photo-banner img{width:100%;height:100%;object-fit:cover;object-position:center center;position:absolute;inset:0}
 .photo-banner::after{content:'';position:absolute;inset:0;background:rgba(0,0,0,.5)}
-.photo-banner-text{position:absolute;inset:0;z-index:1;display:flex;align-items:center;justify-content:center;color:#fff;font-family:var(--font-display);font-size:clamp(1.6rem,3.5vw,2.8rem);font-weight:700;line-height:1.3;letter-spacing:-1px;text-align:center;padding:40px;max-width:800px;margin:0 auto}
+.photo-banner-text{position:absolute;inset:0;z-index:1;display:flex;align-items:center;justify-content:center;color:#fff;font-family:var(--font-display);font-size:clamp(1.6rem,3.5vw,2.8rem);font-weight:700;line-height:1.3;letter-spacing:-1px;text-align:center;padding:40px 80px}
 
 /* SKILLS */
 .skills-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:20px}
@@ -266,7 +266,7 @@ footer{background:var(--surface);border-top:1px solid var(--border);padding:64px
   .media-grid{grid-template-columns:1fr}
   .feed-grid{grid-template-columns:1fr}
   .gallery-grid{grid-template-columns:repeat(2,1fr)}
-  .photo-banner{min-height:40vh}
+  .photo-banner{min-height:50vh}
   section{padding:64px 0}
 }
 </style>
