--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@ section{padding:100px 0;transition:background .7s var(--ease)}
 .photo-banner::after{content:'';position:absolute;inset:0;background:rgba(0,0,0,.625)}
 .photo-banner-text{position:absolute;inset:0;z-index:1;display:flex;align-items:center;justify-content:center;color:#fff;font-family:var(--font-display);font-size:clamp(1.4rem,3.5vw,2.8rem);font-weight:700;line-height:1.3;letter-spacing:-1px;text-align:center;padding:40px 24px}
 .photo-banner-text .mobile-br{display:none}
+.photo-banner-text span{display:inline}
 
 .skills-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:20px}
 .skill-card{background:var(--surface);border:1px solid var(--border);border-radius:var(--radius);padding:32px 28px;transition:all .3s var(--ease);box-shadow:var(--card-shadow)}
