--- a/INDEX.html
+++ b/INDEX.html
@@ -509,6 +509,7 @@ brother, everything is art if you're paying enough. 🎨</div><div class="feed-m
         <h4>Connect</h4>
         <a href="https://www.linkedin.com/in/geverduin/" target="_blank">LinkedIn<br><span class="link-sub">Carefully professionally curated</span></a>
         <a href="https://x.com/geverduin" target="_blank">X / Twitter<br><span class="link-sub">Raw &amp; unfiltered thoughts</span></a>
+        <a href="https://wa.me/14155238886" target="_blank">WhatsApp<br><span class="link-sub">Someone in my team will definitely maybe respond</span></a>
         <a href="mailto:giovanni.everduin@gmail.com">Email<br><span class="link-sub">50/50 chance I'll read it</span></a>
       </div>
       <div class="footer-col">
