--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@ body[data-mode="perso"] .toggle-track::after{transform:translateX(20px)}
 .hero-pre{font-family:var(--font-mono);font-size:.8rem;letter-spacing:3px;text-transform:uppercase;color:var(--accent);margin-bottom:24px}
 .hero h1{font-family:var(--font-display);font-size:clamp(2.4rem,4.2vw,3.8rem);font-weight:800;line-height:1.05;letter-spacing:-2px;margin-bottom:28px}
 .hero-sub{font-size:1.05rem;color:var(--text2);max-width:520px;line-height:1.7;margin-bottom:32px;transition:color .7s var(--ease)}
-.hero-tags{display:flex;flex-wrap:wrap;gap:10px}
-.tag{font-size:.75rem;font-weight:600;padding:8px 16px;border-radius:20px;background:var(--accent-glow);border:1px solid var(--accent-border);color:var(--accent);letter-spacing:.5px;text-align:center;white-space:nowrap}
+.hero-tags{display:grid;grid-template-columns:repeat(3,1fr);gap:10px;max-width:480px}
+.tag{font-size:.75rem;font-weight:600;padding:10px 16px;border-radius:20px;background:var(--accent-glow);border:1px solid var(--accent-border);color:var(--accent);letter-spacing:.5px;text-align:center;white-space:nowrap}
 
 .hero-portrait-wrap{display:flex;justify-content:center;align-items:center;position:relative}
 .hero-portrait-container{position:relative;width:100%;max-width:440px;aspect-ratio:3/4;border-radius:var(--radius);overflow:hidden}
